--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,1 +1,14 @@
-dsfsd
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Taco Cloud</title>
+</head>
+<body>
+<h1>Welcome ...</h1>
+<img th:src="@{/images/welcome.png}" />
+<!--<form th:action="@{/redirect-to-design}" th:object="${form}" method="get">
+    <button type="submit">Go to Design</button>
+</form>-->
+</body>
+</html>
