--- a/src/main/resources/templates/editFlight.html
+++ b/src/main/resources/templates/editFlight.html
@@ -28,7 +28,7 @@
         <label for="airlineCompany">Airline Company:</label>
         <input type="text" id="airlineCompany" th:field="*{airlineCompany.name}" />
 
-        <button type="submit">Edit</button>
+        <button type="submit">Finish</button>
     </form>
 </body>
 </html>
