added search screen

--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -5,7 +5,7 @@
     <title>Flights</title>
 </head>
 <body>
-
+    <div th:insert="~{mainMenu :: menu}"></div>
 
     <h2>List of the flights</h2>
 
@@ -47,5 +47,6 @@
         </tbody>
     </table>
 
+    <div th:insert="~{footer :: copy}"></div>
 </body>
 </html>
