--- a/src/main/resources/templates/partials/mainMenu.html
+++ b/src/main/resources/templates/partials/mainMenu.html
@@ -11,8 +11,8 @@
             <div th:fragment="menu">
                 <p>Please select an option</p>
                 <ol>
-                    <li><a href="flights.html" th:href="@{/api/flight/}">Flights</a></li>
-                    <li><a href="searchFlight.html" th:href="@{/api/flight/searchFlight/}">Search Flight</a></li>
+                    <li><a href="../flights.html" th:href="@{/api/flight/}">Flights</a></li>
+                    <li><a href="../searchFlight.html" th:href="@{/api/flight/searchFlight/}">Search Flight</a></li>
 
                     <li><a href="subscribe.html" th:href="@{/subscribe}">Subscribe to our Newsletter</a></li>
                     <li><a href="userprofile.html" th:href="@{/userprofile}">See User Profile</a></li>
